WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152767
REGRESSION (
r192432
): Keyboard repeat doesn't work anymore for arrow keys/spacebar
https://bugs.webkit.org/show_bug.cgi?id=152767
Summary
REGRESSION (r192432): Keyboard repeat doesn't work anymore for arrow keys/spa...
Tim Horton
Reported
2016-01-05 17:38:53 PST
REGRESSION (
r192432
): Keyboard repeat doesn't work anymore for arrow keys/spacebar
Attachments
Patch
(2.16 KB, patch)
2016-01-05 17:40 PST
,
Tim Horton
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-01-05 17:40:12 PST
Created
attachment 268340
[details]
Patch
Tim Horton
Comment 2
2016-01-05 17:40:34 PST
<
rdar://problem/24017380
>
Tim Horton
Comment 3
2016-01-05 18:04:04 PST
http://trac.webkit.org/changeset/194624
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug